# imlib2_loaders

./: .gitignore  ChangeLog  Makefile.am  README.in  configure.ac  imlib2_loaders.spec.in
src/modules/loaders/: Makefile.am  image.h  loader_ani.c  loader_common.h  loader_dwg.c  loader_eet.c  loader_ico.c  loader_xcf.c  loader_xcf.h  loader_xcf_pixelfuncs.c
