AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile \
		       config.guess config.h.in config.sub \
		       configure depcomp install-sh \
		       ltmain.sh missing \
		       m4/*.m4

EXTRA_DIST = AUTHORS COPYING COPYING-PLAIN COPYING.loader_xcf imlib2_loaders.spec imlib2_loaders.spec.in \
             README.in README
